--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,33 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+/* Default sizing Desktop breakpoint */
+
+.big-news {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+img {
+  margin-top: 10px;
+  margin-right: 10px;
+  width: 230px;
+  height: 240px;
+}
+
+/* Sizing for Tablets */
+@media (min-width: 668px) and (max-width: 1024px) {
+  img {
+    border: 5px solid black;
+    justify-content: space-around;
+  }
+}
+
+/* Sizing for Mobile */
+@media (max-width: 667px) {
+  img {
+    border: 5px solid pink;
+  }
+}
