--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,65 @@
-html {
-  background: #0025ff;
+html,
+body {
+  background: white;
   color: #fff;
+  margin: 0;
+  
+}
+
+header {
+  background-color: black;
+  height: 60px;
+  width: 100%;
+  font-family: "Texturina", serif;
+  position: fixed;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  font-family: "Texturina", serif;
+  font-variant: small-caps;
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  padding: 14px;
+  cursor: pointer;
+}
+
+li a:hover {
+  opacity: 0.5;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+ul li .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:black;
+  box-shadow: 1px 2px grey;
+  min-width: 50px;
+  min-height: 100px;
+  padding: 10px;
+}
+
+.dropdown-content a {
+  font-size: 18px;
+  color: white;
+  padding: 5px;
+  cursor: pointer;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  opacity: 0.9;
+  display: block;
+  float: left;
 }
