Continued general structure to the code

--- a/code/style.css
+++ b/code/style.css
@@ -1,12 +1,15 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #fff;
+  color: #000;
 }
 
 
 
-.logo {
+/*** HEADER ***/
 
+/*
+.logo {
+  
 }
 
 .big-news {
@@ -29,7 +32,11 @@ html {
 
 }
 
+*/
 
+
+
+/*** MEDIA QUERIES ***/
 
 /* Tablet - only include the elements that I want to behave differently on this specific device */
 @media (min-width: 667px) and (max-width: 1024px) { 
