Footer created and styled

--- a/code/style.css
+++ b/code/style.css
@@ -90,3 +90,17 @@ article{
   padding: 10px;
   box-sizing: border-box;
 }
+
+
+/*** Footer ***/
+
+footer{
+  background: #2a2c36;
+  color:#fff;
+  height:50px;
+  width: 100%;
+  text-align: center;
+  padding-top: 12px;
+  font-size: 14px;
+  
+}
