--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,24 @@
 html {
-  background: #0025ff;
+  background: rgba(7, 7, 7, 0.932);
+  color: rgb(255, 255, 255);
+}
+
+/*** HEADER ***/
+header {
+  background: rgb(143, 16, 16);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+
+}
+
+header img {
+  width: 50px;
+  height: 50px;
+}
+
+nav a {
   color: #fff;
+  text-decoration: none;
 }
