--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,105 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-image: url("background.jpg");
+  font-family: 'Libre Baskerville', serif;
+}
+
+/************ HEADER ************/
+
+header {
+  background-color: white;
+  display: flex;
+  border: 2px solid #a7adb3;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+header img {
+  width: 80px;
+}
+h1 {
+  font-family: 'Parisienne', cursive;
+  font-weight: 300;
+}
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  width: 30px;
+  height: 25px;
+  justify-content: space-between;
+  margin: 0 10px 0 0;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  border-radius: 5px;
+  background-color: black;
+}
+
+/************ BIG NEWS ************/
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.big-news img {
+  width: 350px;
+  border-radius: 10px 10px 0 0;
+}
+
+figure {
+  background-color: white;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px;
+  box-shadow: 5px 5px 5px #000;
+}
+
+figcaption {
+  background-color: #a7adb3;
+  border-radius: 0 0 10px 10px;
+  width: 350px;
+  padding: 5px 0;
+}
+
+.big-news-text {
+  background-color: white;
+  width: 350px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px 5px;
+  margin: 0 0 20px 0;
+}
+h2 {
+  margin: 10px 0;
+  font-style: italic;
+}
+
+/************ SMALL NEWS ************/
+
+.small-news {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.small-news img {
+  width: 350px;
+  border-radius: 10px;
+}
+.small-news div {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0 0 20px 0;
+  box-shadow: 5px 5px 5px #000;
 }
