--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,14 @@
 html {
-  background-color: whitesmoke;
+  background-color: #F0EFF0;
 }
 
 h1 {
   color: #d9212d;
   font-family: 'Montserrat', sans-serif;
-  text-align-last: left;
+  text-align-last:center;
   margin-bottom: 2px;
   padding: 20px;
-  font-size: 50px;
+  font-size: 70px;
 }
 
 .subscribe {
@@ -20,6 +20,7 @@ h1 {
 li {
   display: inline-block;
   float: right;
+  
 }
 
 li a {
@@ -44,7 +45,7 @@ li a:hover {
   
 }
 
-.flex-child {
+.flex-child-two {
 margin: 10px;
 font-family:'Montserrat', sans-serif;
 font-size: small;
@@ -71,4 +72,114 @@ p {
 
   border-bottom: 1px solid;
  
+}
+
+
+h3 {
+    font-size: x-small;
+    margin: 60px 0px 10px 30px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+  }
+
+.flex-container {
+
+   justify-content: left;
+   text-align: left;
+   display: flex;
+   height: 260px;
+   width: 1040px;
+   border: 2px solid;
+    
+}
+
+
+.flex-childone.one {
+
+  justify-content: left;
+  text-align: left;
+  display: flex;
+  
+}
+
+.flex-childone img{
+
+  padding: 5px;
+  height: 250px;
+  width: 250px;
+  
+}
+
+.flex-box {
+
+ justify-content:left;
+ text-align: left;
+ align-items:flex-start;
+ display: flex;
+ height: 220px;
+ width: 500;
+
+}
+
+
+.flex-boxoneone { 
+ 
+  
+ width: 90%;
+
+
+ border: 3px ridge #f7f7f7 ; 
+ text-align: end;
+ justify-content:left;
+ text-align: left;
+ align-items:flex-start;
+ margin-right: 10px;
+  
+
+  }
+  
+ 
+
+.flex-boxoneone.artmarket{
+
+  width: 250px;
+  height: 100px;
+  
+}
+
+
+.flex-boxoneone.modemist {
+
+  width: 240px;
+  height: 100px;
+}
+
+.flex-boxoneone.resistance {
+
+  width: 245px;
+  height: 100px;
+}
+
+.flex-boxoneone.almost {
+
+  width: 245px;
+  height: 100px;
+}
+
+.flex-boss {
+
+  justify-content: left;
+  text-align: left;
+  display: flex;
+  height: 200px;
+  width: 1000px;
+  margin-bottom: 70px;
+}
+
+.flex-book img{
+
+  padding: 5px;
+  height: 250px;
+  width: 250px;
+
 }
