add logo and hamburger menu

--- a/code/assets/css/header.css
+++ b/code/assets/css/header.css
@@ -1,3 +1,9 @@
 .main-header {
   background-color: var(--secondaryColorNormal);
 }
+.header-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: calc(var(--spacing) * 4);
+}
