--- a/code/assets/css/variables.css
+++ b/code/assets/css/variables.css
@@ -1,20 +1,19 @@
 :root {
   /* COLOR PALETTE */
   --primaryColor: 197;
-  --primaryColorLight:  hsl(var(--primaryColor), 78%, 34%);
+  --primaryColorLight: hsl(var(--primaryColor), 78%, 34%);
   --primaryColorNormal: hsl(var(--primaryColor), 78%, 27%);
   --primaryColorDarker: hsl(var(--primaryColor), 50%, 25%);
   --secondaryColor: 52;
-  --secondaryColorLight:  hsl(var(--secondaryColor), 97%, 57%);
+  --secondaryColorLight: hsl(var(--secondaryColor), 97%, 57%);
   --secondaryColorNormal: hsl(var(--secondaryColor), 97%, 50%);
   --secondaryColorDarker: hsl(var(--secondaryColor), 92%, 48%);
-
 
   /* SIZE */
   --xSmall: 0.5em;
   --small: 0.8em;
   --medium: 1em;
-  --large: 1.2em
-  --xLarge: 1.5em
+  --large: 1.2em;
+  --xLarge: 1.5em;
   --spacing: 4px;
 }
