--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,40 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #fff;
+  color: #000;
+}
+
+body {
+  margin: 0;
+}
+
+/* NAVIGATION BAR */
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  flex-basis: 70%;
+  padding: 0 18px;
+}
+
+header img {
+  width: 50px;
+  height: 50px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  padding: 0 18px;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
