--- a/code/style.css
+++ b/code/style.css
@@ -33,3 +33,18 @@ header {
   background-color: darkslategray;
   border-radius: 20px;
 }
+
+header img {
+  width: 200px;
+}
+
+nav a {
+  color: darkslategrey;
+  text-decoration: none;
+  font-weight: 100;
+  margin: 14px;
+}
+
+nav {
+  display: none 
+}
