--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,20 @@ body {
   Margin: 0;
 }
 
+h1 {
+  font-size: 30px;
+  line-height: 30px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+p {
+  font-weight: 200;
+}
+
 /*** Styling the header ***/
 
 header {
@@ -47,6 +61,34 @@ nav a {
 
 nav {
   display: none 
+}
+
+/*** Styling the big news section ***/ 
+.big-news {
+  margin: 20px;
+}
+
+.big-news a {
+  background-color: white;
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  Box-sizing: border-box;
+  box-shadow: 2px 2px lightgrey;
+  width: 100%;
+  max-width: 1100px;
+}
+
+.big-news img {
+  width: 95%;
+  padding: 15px;
+}
+
+.big-news div {
+  text-align: center;
 }
 
 /*** Media queries ***/
