--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   
 }
+ 
+/*** HEADER AND NAVIGATION **/
 
 header {
   background-color: black;
@@ -12,6 +14,8 @@ header {
   width: 100%;
   font-family: "Texturina", serif;
   position: fixed;
+  margin-bottom: 40px;
+  top: 0;
   
 }
 
@@ -27,6 +31,8 @@ h1 {
   
 }
 
+/*** NAVBAR ***/
+
 ul {
   list-style-type: none;
 }
@@ -38,7 +44,9 @@ li {
 li a {
   font-family: "Texturina", serif;
   font-variant: small-caps;
+  font-weight: 600;
   font-size: 18px;
+  letter-spacing: 1.5px;
   color: white;
   text-decoration: none;
   padding: 14px;
@@ -46,7 +54,7 @@ li a {
 }
 
 li a:hover {
-  opacity: 0.5;
+  color: rgb(71, 128, 104);
 }
 
 .dropdown-content {
@@ -69,4 +77,106 @@ ul li ul:hover {
   float: left;
 }
 
+/*** SOCIAL MEDIA BUTTONS ***/
 
+.fa {
+  float: right;
+  padding: 14px;
+  background: white;
+  color: black;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 6px;
+  margin-top: -5px;
+  border-radius: 50%;
+}
+
+.fa-facebook {
+  margin-right: 20px;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+/*** CONTENT ***/
+
+.header-two {
+  width: 100%;
+  margin-top: 80px;
+}
+
+.header-two h2 {
+  font-family: "Texturina", serif;
+  color: black;
+  font-size: 26px;
+  text-align: center;
+}
+
+.big-news {
+  display: inline-flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.box {
+  display: inline-block;
+  width: 520px;
+  flex-direction: column;
+  color: black;
+}
+
+.box img {
+  max-width: 500px;
+  max-height: 500px;
+  box-shadow: 2px 3px #888;
+}
+
+.box h3 {
+  font-family: serif;
+  font-size: 26px;
+}
+
+.box p {
+  font-family: serif;
+  font-size: 18px;
+}
+
+/*** OTHER NEWS***/
+
+.other-news {
+  display: inline-flex;
+  justify-content: space-around;
+  margin-top: 40px;
+  width: 100%;
+}
+
+.small-box {
+  display: inline-block;
+  justify-content: space-around;
+  width: 300px;
+  color: black;
+  margin-bottom: 100px;
+}
+
+.small-box img {
+  max-width: 300px;
+  max-height: 400px;
+  box-shadow: 2px 3px #888;
+}
+
+
+/*** FOOTER ***/
+
+.footer {
+  height: 50px;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
+
+}
