--- a/code/style.css
+++ b/code/style.css
@@ -106,6 +106,11 @@ nav {
   .hamburger {
     display: none;
   }
+
+  .big-news div {
+    text-align: left;
+  }
+
 }
 
 /*For desktop*/
@@ -121,5 +126,10 @@ nav {
 
   .hamburger {
     display: none;
+  }
+
+  .big-news a {
+    flex-direction: row;
+    align-items: center;
   }
 }
