adjusting appearance according to screentype

--- a/code/style.css
+++ b/code/style.css
@@ -34,3 +34,12 @@ html {
     color: #835F80;
   }
   
+  @media (max-width: 500px) {
+    .nav {
+      font-size: 9px;
+      justify-content: center;
+    }
+    .flex-container {
+      justify-content: center;
+    }
+  }
