adjusting appearance according to screentype

--- a/code/style.css
+++ b/code/style.css
@@ -43,3 +43,16 @@ html {
       justify-content: center;
     }
   }
+
+  @media (width:768px) {
+    .nav {
+      font-size: 15px;
+      justify-content: center;
+    }
+    .flex-container {
+      justify-content: center;
+    }
+  }
+  
+  
+  
