changing layout for different links

--- a/code/style.css
+++ b/code/style.css
@@ -59,4 +59,35 @@ html {
     padding-top: 40px;
     }
   
-  
+  /*effekter länkar*/
+a:link {
+  text-decoration: none;
+  color: grey;
+ 
+}
+
+a:hover {
+  text-decoration: none;
+  color: darkgrey;
+
+}
+
+a h1:link {
+  text-decoration: none;
+  color: grey;
+}
+
+a h1:hover {
+  text-decoration: none;
+  color: darkgrey;
+}
+
+a h3:link {
+  text-decoration: none;
+  color: grey;
+}
+
+a h3:hover {
+  text-decoration: none;
+  color: darkgrey;
+}
