--- a/code/style.css
+++ b/code/style.css
@@ -142,6 +142,23 @@ nav {
     text-align: left;
   }
 
+  .news-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .news {
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 40%;
+    justify-content: flex-start;
+    margin-right: 20px;
+    text-align: left;
+    /**Add padding ?**/
+  }
+
 }
 
 /*For desktop*/
@@ -162,5 +179,19 @@ nav {
   .big-news a {
     flex-direction: row;
     align-items: center;
+  }
+
+  .news-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .news {
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 20%;
+    text-align: left;
+    /** add padding/margin?**/
   }
 }
