adjustments for big-news section

--- a/code/style.css
+++ b/code/style.css
@@ -96,3 +96,36 @@ a h3:hover {
   text-decoration: none;
   color: darkgrey;
 }
+
+
+.big-news {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;  
+    background-color: #E2F3EB;
+    
+  
+  
+  
+    
+  }
+  #img-big {
+    object-fit: scale-down;
+    width: 100%;
+    height: auto;
+   
+  }
+  /*
+  .big-news-item1{
+    background-color: #E2F3EB;
+    
+  }
+  
+  .big-news-item2 {
+    background-color: #E2F3EB;
+    
+  }*/
+  
+  
+  
