changing layout for other-news section

--- a/code/style.css
+++ b/code/style.css
@@ -258,3 +258,42 @@ width: 58%;
 }
 
   
+
+.other-news-item {
+  text-align: center;
+  background-color: #E2F3EB;
+ 
+  
+}
+/*
+.other-news-item-img {
+  object-fit: scale-down;
+  width: 100%;
+  height: auto;
+}*/
+
+#first {
+  object-fit: scale-down;
+  width: 100%;
+  /*height: auto;*/
+}
+
+#second {
+  object-fit: scale-down;
+  width: 100%;
+  /*height: auto;*/
+}
+
+#third {
+  object-fit: scale-down;
+  width: 100%;
+  /*height: auto;*/
+
+}
+
+#fourth {
+  object-fit: scale-down;
+  width: 100%;
+  /*height: auto;*/
+
+}
