--- a/code/style.css
+++ b/code/style.css
@@ -297,3 +297,10 @@ width: 58%;
   /*height: auto;*/
 
 }
+
+.footer{
+  background-color: #E7D6D6;
+    text-align: center;
+    padding: 10px;
+  }
+  
