Added a placeholder image, added html structure and placeholder text, added media queries

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,23 @@
+/*Styling for mobile phone*/
+
 html {
   background: #0025ff;
   color: #fff;
+}
+
+section {
+  background-color: red;
+}
+
+
+
+
+/*Styling for tablet*/
+@media (min-width:668px) and (max-width: 1024px) {
+
+}
+
+/*Styling for desktop*/
+@media (min-width: 1025px) {
+
 }
